Organiza unidades em diretórios

--- a/1-EDA-e-vis/eda-alunos-ad1.Rmd
+++ b/1-EDA-e-vis/eda-alunos-ad1.Rmd
@@ -23,7 +23,7 @@ Carregando os dados.
 (Lembre do Import Dataset)
 
 ```{r}
-alunos.tudo = read.csv("dados/alunos-ad1.csv",
+alunos.tudo = read.csv("../dados/alunos-ad1.csv",
                        header=FALSE, 
                        comment.char="#")
 
