--- a/5-regressao/regressao logistica.Rmd
+++ b/5-regressao/regressao logistica.Rmd
@@ -14,37 +14,91 @@ library(dplyr, warn.conflicts = FALSE)
 library(broom)
 ```
 
-# Sobre a função Logit
-
-```{r}
-# Um preditor numérico
-x = -20:20
-
-# Usando uma função Logit qualquer
-py_dado_x = exp(1.2 - 1.3*x)/(1 + exp(1.2 - 1.3* x))
-data.frame(x, py_dado_x) %>% 
-  ggplot(aes(x, py_dado_x)) + 
-  geom_point()
-```
-
-# Um exemplo com o Titanic
+# Exemplo com o titanic
 
 ```{r}
 titanic <- read.csv("titanic3.csv")
-titanic <- select(titanic, pclass, survived, sex, age)
+titanic <- select(titanic, pclass, survived, sex, age, fare)
 titanic$pclass <- as.factor(titanic$pclass)
 titanic$survived <- as.factor(titanic$survived)
 titanic <- na.omit(titanic)
 
 ggpairs(titanic)
 
-bm <- glm(survived ~ sex, 
+# Parece haver uma relação entre fare e survived
+ggplot(titanic, aes(x = survived, y = fare)) + 
+  geom_violin(fill = "lightblue") + 
+  geom_point(position = position_jitter(.2), alpha = .3) + 
+  scale_y_log10()
+
+# Seria possível passar uma regressão linear?
+ggplot(titanic, aes(x = fare, y = survived)) + 
+  scale_x_log10() + 
+  geom_count(alpha = .5)
+```
+
+
+# Sobre a função Logit
+
+```{r}
+# Um preditor numérico
+x = -20:20
+
+minha_logit = function(b0, b1, x){
+  return(exp(b0 + b1 * x) / (1 + exp(b0 + b1 * x)))
+}
+
+# Usando uma função Logit qualquer
+py_dado_x = minha_logit(1.2, 1.3, x)
+
+data.frame(x, py_dado_x) %>% 
+  ggplot(aes(x, py_dado_x)) + 
+  geom_point() + 
+  geom_line()
+
+# coeficiente negativo: 
+py_dado_x = minha_logit(1.2, -1.3, x)
+
+data.frame(x, py_dado_x) %>% 
+  ggplot(aes(x, py_dado_x)) + 
+  geom_point() + 
+  geom_line()
+```
+
+# Fit univariado no exemplo com o Titanic
+
+A interpretação é semelhante à regressão linear. Exceto que os valores dos coeficientes sem o exp fazem pouco sentido. Aqui é melhor usar a noção de odds ratio. Para isso basta exponenciar os coeficientes encontrados. 
+
+```{r}
+titanic = titanic %>% 
+  filter(fare > 0) %>% 
+  mutate(logFare = log(fare))
+  
+bm <- glm(survived ~ logFare, 
           data = titanic, 
           family = "binomial")
+
 tidy(bm, conf.int = TRUE)
+# EXPONENCIANDO:
+tidy(bm, conf.int = TRUE, exponentiate = TRUE)
+## Como aqui y = exp(b0)*exp(b1*x1), aumentar em uma unidade x, faz com que y seja multiplicado por exp(b1), que é o coeficiente acima
+
+# Não existe um R^2 aqui
 glance(bm)
+# Pseudo R^2:
 pR2(bm)
 
+expectativa_realidade = augment(bm, type.predict = "response") 
+
+expectativa_realidade %>% 
+  mutate(survivedNum = ifelse(survived == "1", 1, 0)) %>% 
+  ggplot(aes(x = logFare)) + 
+  geom_count(aes(y = survivedNum), alpha = 0.5) + 
+  geom_line(aes(y = .fitted))
+
+```
+
+```{r}
 bm <- glm(survived ~ pclass, 
           data = titanic, 
           family = "binomial")
@@ -54,64 +108,61 @@ pR2(bm)
 #summary(bm)
 ```
 
-A interpretação é semelhante à regressão linear. Exceto que os valores dos coeficientes sem o exp fazem pouco sentido. Aqui é melhor usar a noção de odds ratio. Para isso basta exponenciar os coeficientes encontrados: 
+
+# Fit relacionando preferências e gêneros
 
 ```{r}
-# Odds ratio:
-exp(bm$coefficients)
+x = read_csv("data/gender_prefs_speeddating.csv")
+gendermodel = glm(gender ~ sport, 
+                  data = select(x, -iid), 
+                  family = "binomial")
+tidy(gendermodel, conf.int = TRUE, exponentiate = TRUE)
+glance(gendermodel)
+pR2(gendermodel)
 
-tidy(bm, conf.int = TRUE) %>% 
-  mutate_each(funs(exp), estimate, conf.low, conf.high)
+expectativa_realidade = augment(gendermodel, 
+                                type.predict = "response") 
+
+expectativa_realidade %>% 
+  mutate(genderNum = ifelse(gender == "1", 1, 0)) %>% 
+  ggplot(aes(x = sports)) + 
+  geom_count(aes(y = genderNum), alpha = 0.5) + 
+  geom_line(aes(y = .fitted))
+
+expectativa_realidade = expectativa_realidade %>% 
+  mutate(categoria_prevista = ifelse(.fitted > .5, "1", "0"))
+
+table(expectativa_realidade$categoria_prevista, expectativa_realidade$gender)
 ```
-
-## Visualizando
-
-```{r}
-bm <- glm(survived ~ age, 
-          data = titanic, 
-          family = "binomial")
-tidy(bm, conf.int = TRUE)
-glance(bm)
-pR2(bm)
-
-m = titanic %>% expand(age)
-predito = data.frame(age = m$age, 
-                     survived = predict(bm, newdata = m, type = "response"))
-
-ggplot(predito, aes(age, survived)) + 
-  #geom_jitter(position = position_jitter(width = .5, height = .1), alpha =.2) + 
-  geom_line(size = 1) 
-```
-
 
 ## Multivariada:
 
 ```{r}
-bm <- glm(survived ~ pclass + sex + age, 
+bm <- glm(survived ~ pclass + sex + age + sex*age, 
           data = titanic, 
           family = "binomial")
 
-tidy(bm, conf.int = TRUE) %>% 
-  mutate_each(funs(exp), estimate, conf.low, conf.high)
+tidy(bm, conf.int = TRUE, exponentiate = TRUE)
 pR2(bm)
 ```
 
-## Fazendo previsões
+## Fazendo previsões com modelos multivariados
 
 ```{r}
 library(tidyr)
 library(modelr) # devtools::install_github("hadley/modelr")
 
-m = titanic %>% expand(pclass, sex, age)
-m$survived = predict(bm, newdata = m, type = "response")
+m = titanic %>% 
+  data_grid(pclass, sex, age)
+mm = augment(bm, newdata = m, type.predict = "response")
 
-ggplot(m, aes(x = age, y = survived, colour = pclass)) + 
-  geom_line() +  
+ggplot(mm, aes(x = age, colour = pclass)) + 
+  geom_line(aes(y = .fitted)) +  
   facet_grid(.~sex) 
 
 ```
 
-
+## Outra forma de avaliar é pela precisão:
 
 ```{r}
 predictions <- predict(bm, type = "response") > .5
