--- a/Tutoriais/tutorial_visualizacoes_narrativas.Rmd
+++ b/Tutoriais/tutorial_visualizacoes_narrativas.Rmd
@@ -68,9 +68,9 @@ Imagem normalmente utilizada para ilustrar um estudo.
  
 Exemplos:
 
-[Padestrin Levitation.net](http://www.nytimes.com/interactive/2010/02/02/us/politics/20100201-budget-porcupine-graphic.html)
+[Padestrin Levitation.net](http://www.visualcomplexity.com/vc/project.cfm?id=255)
 
-[A visual introduction to machine learning](http://www.washingtonpost.com/wp-srv/special/world/north-korean-prison-camps-2009/)
+[A visual introduction to machine learning](http://www.r2d3.us/visual-intro-to-machine-learning-part-1/)
 
 ### Gráfico anotado
 
