--- a/4-Inferencia/3-inferencia-2-amostras.Rmd
+++ b/4-Inferencia/3-inferencia-2-amostras.Rmd
@@ -14,15 +14,15 @@ editor_options:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
-library(resample)
+library(resample) # <-- Para bootstrap!
 library(GGally)
 theme_set(theme_bw())
 ```
 
-Usando novamente os dados de Andryw.
+Usando novamente os dados extraídos do Last.fm
 
 ```{r}
-lastfm = read.csv("dados/experimento-lastfm.csv")
+lastfm = read_csv("dados/experimento-lastfm.csv")
 lastfm = na.omit(lastfm)
 glimpse(lastfm)
 
@@ -32,20 +32,47 @@ lastfm %>% ggplot(aes(old)) + geom_histogram(binwidth = 10)
 experiment = sample_n(lastfm, 1000)
 ```
 
-## ICs para médias e medianas
+## Bootstrap com bibliotecas
+
+Temos duas bibliotecas principais. Para algumas coisas, uma funciona melhor que a outra, então conheça as duas. A primeira é a `resample`:
 
 ```{r}
-# install.packages("resample")
-library(resample)
-# concorrente: boot
-
-mean.news = bootstrap(experiment, mean(ecletic), R = 1000) %>% 
-  CI.bca(probs = c(.025, .975))
-mean.news
-
-b = bootstrap(experiment, median(news))
-median.news = CI.percentile(b, probs = c(.025, .975))
+median.news = bootstrap(experiment, 
+                        median(news), 
+                        R = 2000) %>% 
+    #CI.bca(probs = c(.025, .975))
+    CI.percentile(probs = c(.025, .975))
 median.news 
+
+median.old = bootstrap(experiment, median(old), R = 2000) %>% 
+    CI.percentile(probs = c(.025, .975))
+median.old 
+
+# Existe também CI.bca . Se ele retornar NaN ou NA, é porque não conseguiu estimar o IC para a estatística que você escolheu com a precisão desejada. Geralmente acontece quando é uma estatística que não tem valores contínuos (ex: mediana.)
+
+```
+
+A outra é a `boot`:
+
+```{r}
+library(boot)
+fun.boot <- function(x, i) {
+    mean(x[i])
+}
+
+res.boot <- boot(data = experiment$news, 
+                 statistic = fun.boot, 
+                 R = 5000)
+plot(res.boot)
+boot.ci(boot.out = res.boot, conf = 0.95, type = "bca")
+```
+
+## Inferência com duas amostras:
+
+```{r}
+b = bootstrap(experiment, mean(news))
+mean.news = CI.bca(b, probs = c(.025, .975))
+mean.news
 
 b = bootstrap(experiment, mean(old))
 mean.old = CI.bca(b, probs = c(.025, .975))
@@ -70,7 +97,7 @@ df %>%
 
 ```{r}
 experiment = experiment %>% 
-  mutate(gosta_de_pop = mediana_pop > 5, 
+  mutate(gosta_de_pop = mediana_pop > 5.5, 
          prop_news = news/(news + old))
 
 # Médias dos grupos separados
@@ -98,7 +125,7 @@ df.medias %>%
 # Agora a diferença das médias
 b.diff.means = bootstrap2(experiment$prop_news, 
                           treatment = experiment$gosta_de_pop, 
-                          median)
+                          mean)
 
 means.diff = CI.percentile(b.diff.means, probs = c(.05, .95))
 means.diff
@@ -109,8 +136,8 @@ data.frame(means.diff) %>%
   geom_hline(yintercept = 0, colour = "darkorange")
 ```
 
-
 ## Diferenças pareadas
+
 ```{r}
 # NÃO PAREADO!
 b = bootstrap2(data = experiment$old, 
@@ -132,9 +159,21 @@ data.frame(rbind(medians.diff, medians.diff.paired)) %>%
 
 ```
 
-## Pacote boot
+## Bootstrap de estatísticas menos óbvias
 
 ```{r}
+experiment = sample_n(lastfm, 1000)
 
+fun.boot <- function(dados, indices) {
+    d = dados[indices,]
+    correlacao = cor(d$news, d$old)
+    return(correlacao)
+}
+
+res.boot <- boot(data = experiment, 
+                 statistic = fun.boot, 
+                 R = 2000)
+plot(res.boot)
+boot.ci(boot.out = res.boot, conf = 0.95, type = "bca")
 ```
 
